welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:-6: error: Missing closing brace `}' assumed here
try {
^loneTeen:1: error: expected class or object definition
def loneTeen(a:Int, b:Int):Boolean = {if ((a <= 19 && a >=13 && (b <= 13 || b >= 19 ) || (b <= 19 && b >=13 && (a <= 13 || a >= 19 )) 
^